# dlt-viewer

./: .. To Do: Notarize  CMakeLists.txt  README.md  ReadME-2
.github/workflows/: BuildPR.yml  Release.yml
scripts/darwin/: build.sh  build_cmake.sh  dltviewer.entitlements  install.sh  macdeployqt.cmake.in  package.cmake  qt5_notarization.sh  qt6_notarization
src/: CMakeLists.txt  version.h
src/cmake/: Darwin.cmake
src/resources/icon/: icon.icns
